overflow error fixed

--- a/hamburger/hamburger.css
+++ b/hamburger/hamburger.css
@@ -1,5 +1,5 @@
-nav {
-  position: relative;
+.nav {
+  position: fixed;
 }
 
 .hamburger {
